fix issue where the site navbar would wrap to two lines in mobile

--- a/assets/less/_header.less
+++ b/assets/less/_header.less
@@ -83,6 +83,10 @@ header.site-header {
             line-height: normal;
             margin-top: 40px;
             text-align: center;
+
+            a {
+                font-size: 1.5rem;
+            }
         }
     }
 }
